# asr_mild_navigation

./: CMakeLists.txt  License.txt  README.md  package.xml
launch/: amcl_diff.launch  env_remote.sh  gazebo_mild_manual_rearranged.launch  gazebo_mild_manual_rearranged_headless.launch  navigation.launch
launch/simulation/: simulation.launch  simulation_floor.launch  simulation_manual.launch  simulation_manual_rearranged.launch  simulation_slam.launch
param/: costmap_common_params.yaml
param/simulation/: ftc_local_planner_params.yaml  global_costmap_params.yaml
rsc/: ftc_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
rsc/maps/: map_flur.pgm  map_flur.yaml  map_labor.pgm  map_labor.yaml  map_labor2.pgm  map_labor2.yaml  map_labor_high_resolution.pgm  map_labor_high_resolution.yaml  map_labor_high_resolution_boxes_only.pgm  map_labor_high_resolution_with_cropboxes.pgm  map_labor_manual_rearranged.pgm  map_labor_manual_rearranged.yaml  map_labor_manual_rearranged_anteroom.pgm  map_labor_manual_rearranged_anteroom.yaml  map_labor_manual_rearranged_with_cropboxes.pgm  map_labor_manual_rearranged_with_cropboxes.yaml
rsc/maps/Map_Blueprint/: floorplan.gml  map_manual.xcf
rsc/rviz_configurations/: nav_mild.rviz  nav_mild_3D.rviz
rsc/simulation/: ftc_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
